third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/structs_visibility/inline_friend_struct_pack.move
//# publish
module 0xA::A {
    friend struct W(|| has drop) has drop;
    public fun f() {}
    public inline fun make_w(): W {
        f
    }
}

//# publish
module 0xA::B {
    use 0xA::A;

    fun test(): A::W {
        A::make_w()
    }
}
